# precomputed-map

./: .gitignore  Cargo.toml  README.md  phf.asm
.github/workflows/: ci.yml
.helix/: languages.toml
demo/: Cargo.toml
demo/src/: hash.rs  main.rs
examples/: make_str2id.rs
make-map/: Cargo.toml
make-map/src/: main.rs
src/: aligned.rs  aligned2.rs  builder.rs  chd.rs  eliasfano.rs  equivalent.rs  lib.rs  macros.rs  phf.rs  seq.rs  seq2.rs  store.rs  store2.rs  util.rs
src/builder/: build.rs  codegen.rs  tests.rs
