[package]
name = "precomputed-map"
version = "0.1.1"
authors = ["quininer <quininer@live.com>"]
description = "Precomputed a Map to embed in binary"
license = "MIT"
repository = "https://github.com/quininer/precomputed-map"
categories = [ "encoding", "no-std", "data-structures" ]
keywords = [ "phf", "mphf", "precomputed", "static" ]
edition = "2024"

[features]
builder = []
